--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -10,7 +10,7 @@
   <% @week_days.each do |day| %>
     <div class='item'>
       <div class='date'>
-        <% day[:month] %>/<% day[:date] %>
+        <%= day[:month] %>/<%= day[:date] %>
       </div>
       <ul class='content'>
       <% if day[:plans].length != 0 %>
@@ -18,7 +18,6 @@
           <li class='plan-list'>・<%= plan %></li>
         <% end %>
       <% end %>
-      </ul>
     </div>
   <% end %>
 </div>
